--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,2 +1,4 @@
-$primary: rgb(255, 255, 255);
-$secondary: rgb(0, 0, 0);
+$white: rgb(255, 255, 255);
+$black: rgb(0, 0, 0);
+$primary: rgb(12, 16, 25);
+$secondary: rgb(18, 137, 237);
