--- a/src/components/unique/finances-gastos/FinancesGastos.module.scss
+++ b/src/components/unique/finances-gastos/FinancesGastos.module.scss
@@ -31,13 +31,18 @@
       border-radius: 5px;
 
       & > div:first-child {
-        width: 75%;
+        width: 80%;
       }
 
       & > div:last-child {
-        width: 25%;
+        width: 20%;
         display: flex;
         justify-content: space-between;
+     
+        svg{
+          color: red;        
+        }
+       
       }
 
       &_a {
