--- a/src/pages/finances/Finances.module.scss
+++ b/src/pages/finances/Finances.module.scss
@@ -1,7 +1,8 @@
 .finances {
   padding: 0 8px;
 
-  & > h2 {
-    margin: 5px 0;
+  & > h3 {
+    // margin: 5px 0;
+    background-color: red;
   }
 }
